Added heroku url

--- a/test/web-boss/index.html
+++ b/test/web-boss/index.html
@@ -38,8 +38,8 @@
 
 
 <!-- Fixme -->
-<script src="http://172.21.111.44:3000/socket.io/socket.io.js"> </script>
-<script src="http://172.21.111.44:3000/webslidecontrol.js"></script>
+<script src="http://slidecontrol.herokuapp.com//socket.io/socket.io.js"> </script>
+<script src="http://slidecontrol.herokuapp.com//webslidecontrol.js"></script>
 
 <!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
