--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Slide Controller">
+    <meta name="description" content="Web Slide Controller">
     <meta name="author" content="leechwin1@gmail.com">
 
 	<title> Controller </title>
@@ -22,16 +22,22 @@
 <body>
 
     <div class="container">
+        <a href="https://github.com/leechwin/webslidecontrol"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
-    	<h1>Controller</h1><br>
-        <div>ServerState: <span id='state' class="label label-success"></span></div><br>
+    	<h1>Web Slide Controller</h1><br>
+
+        <div>ServerState: <span id='state' class="label label-warning">Loading...</span></div><br>
 
         <div class="btn-group">
           <button class="btn btn-large" onclick='pre()'>Pre</button>
           <button class="btn btn-large" onclick='next()'>Next</button>
         </div>
+    </div>
 
-
+    <div class='footer'>
+        <p>Made by <a href="http://leechwin.github.com/" rel="author">Lee Changhyun</a>. Uses <a href="http://twitter.github.com/bootstrap/" rel="external">Twitter Bootstrap</a> and <a href="http://www.nodejs.org/" rel="external">Node.js</a>.<br>
+        Node.js Hosting by <a href="https://devcenter.heroku.com/categories/nodejs" rel="author">Heroku</a>.
+        </p>
     </div>
 
     <!--Loading -->
