--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
 	<title> Controller </title>
 
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-    <link href="favicon.ico" rel="apple-touch-icon"/>
+    <link href="controlfavicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <link href="controlfavicon.ico" rel="apple-touch-icon"/>
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
