--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <!-- Disable viewport zooming on mobile safari -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- AppMode on mobile safari -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Web Slide Controller">
     <meta name="author" content="leechwin1@gmail.com">
 
 	<title> Controller </title>
-
+    <!-- Browser favicon -->
     <link href="controlfavicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <!-- IPhone home page bookmark icon creation -->
     <link href="controlfavicon.ico" rel="apple-touch-icon"/>
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
