Support reveal.js, lmpress.js

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,14 @@
           <button class="btn btn-large" onclick='pre()'>Pre</button>
           <button class="btn btn-large" onclick='next()'>Next</button>
         </div>
+
+        <br>
+        <br>
+
+        <div class="btn-group">
+          <button class="btn btn-small" onclick='start()'>Start</button>
+          <button class="btn btn-small" onclick='end()'>End</button>
+        </div>
     </div>
 
     <div class='footer'>
