Added Button imagae

--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,16 @@
         <div>ServerState: <span id='state' class="label label-warning">Loading...</span></div><br>
 
         <div class="btn-group">
-          <button class="btn btn-large" onclick='pre()'>Pre</button>
-          <button class="btn btn-large" onclick='next()'>Next</button>
+          <button class="btn" onclick='pre()'><image src="img/navigation-left.png"/></button>
+          <button class="btn" onclick='next()'><image src="img/navigation-right.png"/></button>
         </div>
 
         <br>
         <br>
 
         <div class="btn-group">
-          <button class="btn btn-small" onclick='start()'>Start</button>
-          <button class="btn btn-small" onclick='end()'>End</button>
+          <button class="btn" onclick='start()'><image src="img/button-begin.png"/></button>
+          <button class="btn" onclick='end()'><image src="img/button-end.png"/></button>
         </div>
     </div>
 
