Added user param

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ if ("ontouchstart" in document.documentElement) {
 -->
 <script src="js/impress.js"></script>
 <script>impress().init();</script>
-<script src="http://webslidecontrol.herokuapp.com/webslidecontrol.js"></script>
+<script src="http://webslidecontrol.herokuapp.com/webslidecontrol.js?user=leechwin1@gmail.com"></script>
 <!--
     
     The `impress()` function also gives you access to the API that controls the presentation.
