--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="menu-panel">
                 <h3>Table of Contents</h3>
                 <ul id="menu-toc" class="menu-toc">
-                    <li class="menu-toc-current"><a href="#item1">Test1</a></li>
-                    <li><a href="#item2">Test2</a></li>
+                    <li class="menu-toc-current"><a href="#item1">Web Slide Control</a></li>
+                    <li><a href="#item2">Motivation</a></li>
                     <li><a href="#item3">Test3</a></li>
                 </ul>
             </div>
@@ -32,9 +32,13 @@
                     <div class="bb-item" id="item1">
                         <div class="content">
                             <div class="scroller">
-                                <h2>Test1</h2>
-                                <p>The Hon. Francis Gillette, in a speech in Hartford, Conn., in 1871, said
-                                save them.</p>
+                                <h2>Web Slide Control</h2>
+                                <br><br><br><br><br>
+                                <h1 align="center">leechwin1@gmail.com</h1>
+                                <br><br>
+                                <h3 align="center"><a href="https://github.com/leechwin/webslidecontrol">Github Project</a></h3>
+                                <br>
+                                <h3 align="center"><a href="http://leechwin.github.com/webslidecontrol">Github Project Presentation</a></h3>
                             </div>
                         </div>
                     </div>
@@ -42,11 +46,24 @@
                     <div class="bb-item" id="item2">
                         <div class="content">
                             <div class="scroller">
-                                <h2>Test2</h2>
+                                <h2>Motivation</h2>
 
-                                <p>"Choked with passion" is no chimera; for passion often kills the
-                                unfortunate possessor of an irritable temper, sometimes suddenly. Care and
-                                over-anxiety sweep away thousands annually.</p>
+                                <h3>Presentation</h3>
+                                <img alt="" src="images/present.png" style="height: 400px;">
+
+                                <h3>Weapon</h3>
+                                <img src="images/pointer.png" style="height: 300px;">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Motivation</h2>
+
+                                <h3>Weapons - Mobile, Tablet, Labtop, Desktop, etc..</h3>
+                                <img src="images/devices.png"">
                             </div>
                         </div>
                     </div>
@@ -61,7 +78,8 @@
                     </div>
 
                 </div>
-                
+
+
                 <nav>
                     <span id="bb-nav-prev">&larr;</span>
                     <span id="bb-nav-next">&rarr;</span>
