--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <ul id="menu-toc" class="menu-toc">
                     <li class="menu-toc-current"><a href="#item1">Web Slide Control</a></li>
                     <li><a href="#item2">Motivation</a></li>
-                    <li><a href="#item3">Test3</a></li>
+                    <li><a href="#item3">Structure</a></li>
+                    <li><a href="#item4">Techniques</a></li>
                 </ul>
             </div>
 
@@ -47,23 +48,42 @@
                         <div class="content">
                             <div class="scroller">
                                 <h2>Motivation</h2>
-
-                                <h3>Presentation</h3>
-                                <img alt="" src="images/present.png" style="height: 400px;">
-
-                                <h3>Weapon</h3>
-                                <img src="images/pointer.png" style="height: 300px;">
+                                <h3>Presentation is a limit on the distance.</h3>
+                                <br>
+                                <img alt="" src="images/present.png" style="height: 70%;">
                             </div>
                         </div>
                     </div>
 
-                    <div class="bb-item">
+                    <div class="bb-item" id="item2-1">
                         <div class="content">
                             <div class="scroller">
                                 <h2>Motivation</h2>
+                                <h3>Is overcome by using a machine. But the costs incurred.</h3>
+                                <br>
+                                <img src="images/pointer.png" style="height: 70%;">
+                            </div>
+                        </div>
+                    </div>
 
-                                <h3>Weapons - Mobile, Tablet, Labtop, Desktop, etc..</h3>
-                                <img src="images/devices.png"">
+                    <div class="bb-item" id="item2-2">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Motivation</h2>
+                                <h3>Anyone has at least one machine. Mobile, Tablet, Labtop, Desktop, etc..</h3>
+                                <br>
+                                <img src="images/devices.png">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item2-3">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Motivation</h2>
+                                <h3>Let's use them. I don't have a money, but i'm creative.</h3>
+                                <br>
+                                <img src="images/creative.png">
                             </div>
                         </div>
                     </div>
@@ -71,14 +91,51 @@
                     <div class="bb-item" id="item3">
                         <div class="content">
                             <div class="scroller">
-                                <h2>Test3</h2>
-                                <p>The origin of the honeymoon is not generally known.</p>
+                                <h2>Structure</h2>
+                                <h3>Using Node.js and WebSocket</h3>
+                                <br>
+                                <img src="images/structure.png">
+                                <br>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item4">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Techniques</h2>
+                                <h3>Server</h3>
+                                <h4>Node.js</h4>
+                                <h4>NPM<br>
+                                    - socket.io<br>
+                                    - express
+                                </h4>
+                                <h4>Node.js Hosting by Heroku</h4>
+                                <br>
+
+                                <h3>Web Slide Controller Page</h3>
+                                <h4>- WebSocket</h4>
+                                <h4>- Bootstrap</h4>
+                                <h4>- Jquery</h4>
+                                <br>
+
+                                <h3>Supported Web Slide Page Framework</h3>
+                                <h4>- reveal.js based slide</h4>
+                                <h4>- impress.js based slide</h4>
+                                <h4>- slide-presentation.js based slide</h4>
+                                <h4>- http://tympanus.net/codrops/2012/12/11/fullscreen-pageflip-layout/ based slide</h4>
+                                <br>
+
+                                <h3>SCM</h3>
+                                <h4>- Github</h4>
+                                <h4>- Git Shell</h4>
+                                <h4>- gh-pages</h4>
+                                <br>
                             </div>
                         </div>
                     </div>
 
                 </div>
-
 
                 <nav>
                     <span id="bb-nav-prev">&larr;</span>
