--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <li class="menu-toc-current"><a href="#item1">Web Slide Control</a></li>
                     <li><a href="#item2">Motivation</a></li>
                     <li><a href="#item3">Structure</a></li>
-                    <li><a href="#item4">Techniques</a></li>
+                    <li><a href="#item4">User scenario</a></li>
+                    <li><a href="#item5">Library&Techniques</a></li>
                 </ul>
             </div>
 
@@ -103,7 +104,18 @@
                     <div class="bb-item" id="item4">
                         <div class="content">
                             <div class="scroller">
-                                <h2>Techniques</h2>
+                                <h2>User scenario</h2>
+                                <br>
+                                <img src="images/wsc.png" style="height: 70%;">
+                                <br>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item5">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Library&Techniques</h2>
                                 <h3>Server</h3>
                                 <h4>Node.js</h4>
                                 <h4>NPM<br>
