--- a/index.html
+++ b/index.html
@@ -116,9 +116,16 @@
                         <div class="content">
                             <div class="scroller">
                                 <h2>Library&Techniques</h2>
+
+                                <h3>SCM</h3>
+                                <h4>- Github</h4>
+                                <h4>- Git Shell</h4>
+                                <h4>- gh-pages</h4>
+                                <br>
+
                                 <h3>Server</h3>
                                 <h4>Node.js</h4>
-                                <h4>NPM<br>
+                                <h4>- NPM<br>
                                     - socket.io<br>
                                     - express
                                 </h4>
@@ -138,14 +145,110 @@
                                 <h4>- http://tympanus.net/codrops/2012/12/11/fullscreen-pageflip-layout/ based slide</h4>
                                 <br>
 
-                                <h3>SCM</h3>
-                                <h4>- Github</h4>
-                                <h4>- Git Shell</h4>
-                                <h4>- gh-pages</h4>
-                                <br>
                             </div>
                         </div>
                     </div>
+
+
+
+<!--
+
+                    <div class="bb-item" id="item22">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>About Github</h2>
+                                1. Github
+                                2. Git tools
+                                   - 키관리의 용이
+                                3. Git Shell
+                                4. Project git
+                                5. gh-pages
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item33">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Server</h2>
+                                1. Node.js
+                                  - severside, clientside language 동일
+                                  - 필자는 jsp, php, tomcat 설정등은 잘모름 초보임
+                                  - 하지만 서버프로그램, 설정등이 쉬움
+                                2. NPM
+                                  - 자바스크립트로 이루어진 node.js 모듈 라이브러리
+                                  - apt-get 과 사용법 유사
+                                3. Module
+                                  - socket.io
+                                    - 비동기 소켓통신
+                                    - websokcet 에 대한 개념
+                                  - fs 사용중 express 를 도입원
+                                    - routing 관련 개념
+                                4. node.js 호스팅기법
+                                  - heroku 사용방법인
+                                    - procfile 설정
+                                    - heroku repository
+                                  - 서버의 개념
+                                5. 기타
+                                  - node.js 로컬에서 테스트 하는방법
+                                  - 파일변경시에 자동 reload 라이브러리 사용법
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item11">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Slide Control Page</h2>
+                                1. Bootstrap UX 사용
+                                  - 반응형 웹
+                                2. 로그인관리
+                                  - 필요성(소켓관리:슬라이드 관리를 위한 용도)
+                                  - 사용자 표시가 반드시 필요함
+                                3. client 에서 필요한 자원내려주기(routing)
+                                   - websocket js 내려주기
+                                   - jquery 내려주기
+                                   - webslidecontrol.js
+                                   - 통합 js 합치기
+                                4. 필요한 개선점
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item11">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Meta Tag Tips</h2>
+                                1. Browser Favicon
+                                2. 북마크 Favicon
+                                3. viewport 란?
+                                3. 더블클릭을 통한 화면 확대 방지
+                                4. appmode 처럼 동작하기 (사파리관)
+                                5. description
+                                6. author
+                                7. Github 리본달
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="bb-item" id="item11">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>개선포인트</h2>
+                                1. QR 코드 소켓인증
+                                2. 다중 clinet 를 포함한 chat 형식의 slide update (질문응답을 트윗형식제공)
+                                3. 로그인시 슬라이드 리스트를 보여주고 슬라이드를 고르거나 할수 있는도앚ㄱ
+                                3. 현재 슬라이드 위치 보여주기
+                                4. 터치이벤트를 이용한 슬라이드 이동
+                                5. Native 와 연관된 ppt 등의 지원?
+                            </div>
+                        </div>
+                    </div>
+
+-->
+
 
                 </div>
 
