Added improvement points page

--- a/index.html
+++ b/index.html
@@ -368,6 +368,29 @@
                     <div class="bb-item" id="item10">
                         <div class="content">
                             <div class="scroller">
+                                <h2>Improvement points</h2>
+
+                                <h3>Move the slide using touch events</h3><br>
+                                <h4>- swipe</h4><br>
+
+                                <h3>Improvement for login</h3><br>
+                                <h4>- QR Code<br>
+                                    - Provide a slide list and check</h4><br>
+
+                                <h3>Support for native slide</h3><br>
+                                <h4>- Power point</h4><br>
+
+                                <h3>client ask questions about the slide content</h3><br>
+                                <h4>- Provided in the form of question-and-answer Tweet</h4><br>
+                                <img src="images/notifier.png"><br>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bb-item" id="item11">
+                        <div class="content">
+                            <div class="scroller">
                                 <h2>Thank you</h2>
                                 <br>
                                 <br>
