Added ending credit

--- a/index.html
+++ b/index.html
@@ -392,30 +392,25 @@
                         <div class="content">
                             <div class="scroller">
                                 <h2>Thank you</h2>
+                                <iframe src="http://starlogs.net/#leechwin/webslidecontrol" frameborder="0" width="700" height="700" marginwidth="0" marginheight="0" scrolling="auto" style="border:1 solid red"></iframe> 
+                            </div>
+                        </div>
+                    </div>
+
+                <!--
+                    <div class="bb-item" id="item12">
+                        <div class="content">
+                            <div class="scroller">
+                                <h2>Thank you</h2>
                                 <br>
                                 <br>
                                 <img src="images/thankyou.png">
                             </div>
                         </div>
                     </div>
+                -->
 
                 </div>
-
-<!--
-                    <div class="bb-item" id="item10">
-                        <div class="content">
-                            <div class="scroller">
-                                <h2>Improvements</h2>
-                                <h3>터치이벤트를 이용한 슬라이드 이동</h3><br>
-                                <h3>QR 코드 소켓인증</h3><br>
-                                <h3>다중 clinet 를 포함한 chat 형식의 slide update (질문응답을 트윗형식제공)</h3><br>
-                                <h3>로그인시 자신의 슬라이드 리스트를 보여주고 슬라이드를 고르거나 할수 있는 기능</h3><br>
-                                <h3>현재 슬라이드 위치 보여주기</h3><br>
-                                <h3>Native 와 연관된 ppt 등의 지원?</h3><br>
-                            </div>
-                        </div>
-                    </div>
--->
 
                 <nav>
                     <span id="bb-nav-prev">&larr;</span>
