Remove trend page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul id="menu-toc" class="menu-toc">
                     <li class="menu-toc-current"><a href="#item1">Web Slide Control</a></li>
                     <li><a href="#item2">Motivation</a></li>
-                    <li><a href="#item3">Structure</a></li>
-                    <li><a href="#item4">User scenario</a></li>
+                    <li><a href="#item3">User scenario</a></li>
+                    <li><a href="#item4">Structure</a></li>
                     <li><a href="#item5">Library&Techniques</a></li>
                     <li><a href="#item6">SCM</a></li>
                     <li><a href="#item7">Server-Side</a></li>
@@ -42,9 +42,7 @@
                                 <br><br><br><br><br>
                                 <h1 align="center">leechwin1@gmail.com</h1>
                                 <br><br>
-                                <h3 align="center"><a href="https://github.com/leechwin/webslidecontrol">Github Project</a></h3>
-                                <br>
-                                <h3 align="center"><a href="http://leechwin.github.com/webslidecontrol">Github Project Presentation</a></h3>
+                                <h3 align="center"><a href="https://github.com/leechwin/webslidecontrol">Github</a></h3>
                             </div>
                         </div>
                     </div>
@@ -89,13 +87,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bb-item" id="item3">
+
+                     <div class="bb-item" id="item3">
                         <div class="content">
                             <div class="scroller">
-                                <h2>Structure</h2>
-                                <h3>Using Node.js and WebSocket</h3>
+                                <h2>User scenario</h2>
                                 <br>
-                                <img src="images/structure.png">
+                                <img src="images/wsc.png" style="height: 70%;">
                                 <br>
                             </div>
                         </div>
@@ -104,9 +102,10 @@
                     <div class="bb-item" id="item4">
                         <div class="content">
                             <div class="scroller">
-                                <h2>User scenario</h2>
+                                <h2>Structure</h2>
+                                <h3>Using Node.js and WebSocket</h3>
                                 <br>
-                                <img src="images/wsc.png" style="height: 70%;">
+                                <img src="images/structure.png">
                                 <br>
                             </div>
                         </div>
@@ -153,16 +152,6 @@
                         <div class="content">
                             <div class="scroller">
                                 <h2>SCM</h2>
-                                <h3>Git</h3>
-                                <img src="images/trend.png">
-                                <br>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bb-item" id="item6-1">
-                        <div class="content">
-                            <div class="scroller">
-                                <h2>SCM</h2>
                                 <h3><a href="https://github.com/">GitHub</a></h3><br>
                                 <h4>- Easy project management<br>
                                     - Distributed<br>
@@ -177,7 +166,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bb-item" id="item6-2">
+                    <div class="bb-item" id="item6-1">
                         <div class="content">
                             <div class="scroller">
                                 <h2>SCM</h2>
@@ -193,7 +182,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bb-item" id="item6-3">
+                    <div class="bb-item" id="item6-2">
                         <div class="content">
                             <div class="scroller">
                                 <h2>SCM</h2>
@@ -205,7 +194,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bb-item" id="item6-4">
+                    <div class="bb-item" id="item6-3">
                         <div class="content">
                             <div class="scroller">
                                 <h2>SCM</h2>
@@ -388,6 +377,7 @@
                         </div>
                     </div>
 
+                <!-- Starwars Ending
                     <div class="bb-item" id="item11">
                         <div class="content">
                             <div class="scroller">
@@ -396,9 +386,9 @@
                             </div>
                         </div>
                     </div>
+                -->
 
-                <!--
-                    <div class="bb-item" id="item12">
+                    <div class="bb-item" id="item11">
                         <div class="content">
                             <div class="scroller">
                                 <h2>Thank you</h2>
@@ -408,7 +398,7 @@
                             </div>
                         </div>
                     </div>
-                -->
+                
 
                 </div>
 
