--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
 <body>
 
     <div class="container">
+        <!-- Fork me on GitHub ribbons
         <a href="https://github.com/leechwin/webslidecontrol"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+        -->
 
     	<h1>Web Slide Controller</h1><br>
 
