--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
                     <li><a href="#item2">Motivation</a></li>
                     <li><a href="#item3">User scenario</a></li>
                     <li><a href="#item4">Structure</a></li>
+                    <!-- FIXME::
                     <li><a href="#item5">Library&Techniques</a></li>
                     <li><a href="#item6">SCM</a></li>
+                    -->
                     <li><a href="#item7">Server-Side</a></li>
                     <li><a href="#item8">Client-Side</a></li>
+                    <!-- FIXME::
                     <li><a href="#item9">Tips</a></li>
+                    -->                    
                 </ul>
             </div>
 
@@ -111,6 +115,7 @@
                         </div>
                     </div>
 
+                <!-- FIXME::
                     <div class="bb-item" id="item5">
                         <div class="content">
                             <div class="scroller">
@@ -207,6 +212,7 @@
                             </div>
                         </div>
                     </div>
+                -->
 
                     <div class="bb-item" id="item7">
                         <div class="content">
@@ -321,6 +327,7 @@
                         </div>
                     </div>
 
+                <!-- FIXME::
                     <div class="bb-item" id="item9">
                         <div class="content">
                             <div class="scroller">
@@ -353,6 +360,7 @@
                             </div>
                         </div>
                     </div>
+                -->
 
                     <div class="bb-item" id="item10">
                         <div class="content">
@@ -377,7 +385,7 @@
                         </div>
                     </div>
 
-                <!-- Starwars Ending
+                <!-- StarWars Ending
                     <div class="bb-item" id="item11">
                         <div class="content">
                             <div class="scroller">
